av-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: av1-web
  namespace: av1-agents
spec:
  selector:
    name: av1-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
